[gd_scene load_steps=2 format=3 uid="uid://c2i3phnhmr7jf"]

[ext_resource type="Script" path="res://addons/gd_inventory/Inventory/InventoryGui/ItemColorRect.gd" id="1_kjv6k"]

[node name="ColorRect" type="ColorRect"]
custom_minimum_size = Vector2(100, 100)
mouse_filter = 1
script = ExtResource("1_kjv6k")

[node name="LabelType" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 43.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "技能书"

[node name="Label2Name" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "吸星大法"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label3Quantity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
